# cdtextinfo

./: .gitignore  AUTHORS  configure.ac
src/: Makefile.am  cdtextinfo.c
